general : made progress

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -12,6 +12,7 @@ body {
   background-color: var(--background--1);
   color: var(--foreground--1);
   font-family: 'Poppins', sans-serif;
+  font-size: 18px;
 }
 
 ul {
