--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,13 @@
 :root {
   --foreground--1: hsl(212, 24%, 26%);
   --background--1: hsl(228, 33%, 97%);
+
+  --clr--active--1: hsl(216, 79%, 62%);
+  --clr--danger--1: hsl(358, 79%, 66%);
+  --clr--success--1: hsl(168, 76%, 42%);
+  --clr--warn--1: hsl(29, 100%, 50%);
+  --clr--neutral--1: hsl(0, 0%, 57%);
+
+  --max--width: 67.5rem;
+  --border--radius--1: 0.4rem;
 }
