general : made progress

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,6 +7,10 @@
   --clr--success--1: hsl(168, 76%, 42%);
   --clr--warn--1: hsl(29, 100%, 50%);
   --clr--neutral--1: hsl(222, 17%, 47%);
+  --clr--border--1: hsl(221, 17%, 66%);
+  --clr--border--2: hsl(222, 17%, 47%);
+  --clr--border--3: hsl(222, 17%, 47%);
+  --shadow--1: rgba(0, 0, 0, 0.1) 2.4px 2.4px 3.2px;
 
   --max--width: 67.5rem;
   --border--radius--1: 0.4rem;
