forms : made progress

--- a/src/elements/formfields/styles.module.scss
+++ b/src/elements/formfields/styles.module.scss
@@ -39,3 +39,9 @@
     color: var(--clr--danger--1);
   }
 }
+
+.textarea {
+  resize: vertical;
+  min-height: 10rem;
+  font-family: 'Poppins', serif;
+}
