--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -40,6 +40,8 @@ button:hover {
 
 a {
   all: unset;
+  transition: 0.3s;
+  border-radius: var(--border--radius--1);
 
   &:hover {
     cursor: pointer;
@@ -48,6 +50,8 @@ a {
   &:visited {
     color: inherit;
   }
+
+  @include focus-visible;
 }
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
