--- a/src/pages/create/styles.module.scss
+++ b/src/pages/create/styles.module.scss
@@ -10,7 +10,6 @@
 }
 
 .fields {
-  margin-top: 2rem;
   @include breakpoint-up(laptop) {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -24,4 +23,8 @@
       grid-column: 1 / 3;
     }
   }
+}
+
+.textarea {
+  position: relative;
 }
