--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,8 @@
 :root {
   --foreground--1: hsl(212, 24%, 26%);
   --background--1: hsl(228, 33%, 97%);
+  --background--2: hsl(228, 33%, 97%);
+  --background--3: hsl(0, 0%, 19%);
 
   --clr--active--1: hsl(216, 79%, 62%);
   --clr--danger--1: hsl(358, 79%, 66%);
