general : made progress

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,6 @@
 :root {
   --foreground--1: hsl(212, 24%, 26%);
+  --foreground--2: hsl(210, 13%, 66%);
   --background--1: hsl(228, 33%, 97%);
   --background--2: hsl(228, 33%, 97%);
   --background--3: hsl(0, 0%, 19%);
