--- a/src/components/alert/styles.module.scss
+++ b/src/components/alert/styles.module.scss
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-weight: bold;
+  font-weight: 600;
   overflow: hidden;
   z-index: 3;
 }
