--- a/src/components/markdown/styles.module.scss
+++ b/src/components/markdown/styles.module.scss
@@ -12,13 +12,39 @@
     margin: 2rem 0;
   }
 
+  code {
+    color: var(--foreground--1);
+    font-weight: 600;
+  }
+
   p {
     margin: 2rem 0;
   }
 
   a {
+    position: relative;
+    border-radius: 5px;
+    width: auto;
     color: var(--clr--active--1);
     font-weight: 600;
+    z-index: 1;
+
+    &::before {
+      content: '';
+      position: absolute;
+      bottom: -0.2rem;
+      right: 0;
+      width: 0;
+      height: 2px;
+      background-color: var(--clr--active--1);
+      transition: width 0.6s cubic-bezier(0.25, 1, 0.5, 1);
+    }
+  }
+
+  a:hover::before {
+    left: 0;
+    right: auto;
+    width: 100%;
   }
 
   ol {
