--- a/src/components/markdown/styles.module.scss
+++ b/src/components/markdown/styles.module.scss
@@ -63,4 +63,11 @@
     border-radius: var(--border--radius--1);
     margin: 2rem 0;
   }
+
+  blockquote {
+    padding: 0.1rem 2rem;
+    border-left: 0.3rem solid var(--clr--border--1);
+    border-radius: var(--border--radius--1);
+    background-color: var(--background--2);
+  }
 }
